/*
* Copyright 2025, TeamDev. All rights reserved.
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* https://www.apache.org/licenses/LICENSE-2.0
*
* Redistribution and use in source and/or binary forms, with or without
* modification, must retain the above copyright notice and the following
* disclaimer.
*
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
* "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
* LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
* A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
* OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
* SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
* LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
* DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
* THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
* (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
* OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

syntax = "proto3";

package given.home;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.given.home.events";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

import "given/home/values.proto";

message DeviceAdded {
    option (is).java_type = "DeviceEvent";
    DeviceId device = 1 [(required) = true];
    string name = 2 [(required) = true];
}

message DeviceRenamed {
    option (is).java_type = "DeviceEvent";
    DeviceId device = 1 [(required) = true];
    string prev_name = 2 [(required) = true];
    string name = 3 [(required) = true];
}

message RoomAdded {
    option (is).java_type = "RoomEvent";
    RoomId room = 1;
    string name = 2 [(required) = true];
}

message RoomRenamed {
    option (is).java_type = "RoomEvent";
    RoomId room = 1;
    string prev_name = 2 [(required) = true];
    string name = 3 [(required) = true];
}

message DeviceMoved {
    option (is).java_type = "RoomDeviceEvent";
    DeviceId device = 1 [(required) = true];

    RoomId prev_room = 3;
    // This field is named `room` to satisfy the getter in the interface.
    RoomId room = 4 [(required) = true];
}

message StateChanged {
    option (is).java_type = "DeviceEvent";
    DeviceId device = 1 [(required) = true];
    State current = 2 [(required) = true];
}
