/*
* Copyright 2025, TeamDev. All rights reserved.
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* https://www.apache.org/licenses/LICENSE-2.0
*
* Redistribution and use in source and/or binary forms, with or without
* modification, must retain the above copyright notice and the following
* disclaimer.
*
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
* "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
* LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
* A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
* OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
* SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
* LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
* DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
* THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
* (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
* OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

syntax = "proto3";

package given.home;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.given.home.commands";
option java_outer_classname = "CommandsProto";
option java_multiple_files = true;

import "given/home/values.proto";

message AddDevice {
    DeviceId device = 1;
    string name = 2 [(required) = true];
}

message AddRoom {
    RoomId room = 1;
    string name = 2 [(required) = true];
}

message MoveDevice {
    DeviceId device = 1 [(required) = true];
    RoomId from = 2;
    RoomId to = 3 [(required) = true];
}

message SetState {
    // Normally the first field of a command is the ID of the target entity.
    // We deliberately put another field so that a route function would be "useful"
    // for obtaining the device ID from the `device` field which comes second.
    State state = 2 [(required) = true];
    DeviceId device = 1;
}
